# SQLlog

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SCOPE.md  README.md  config.yaml.example  install_service.bat  pyproject.toml  requirements.txt  test_connections.py  test_sql_integration.py  uninstall_service.bat
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: API.md  CONFIGURATION.md  EXISTING_SYSTEM_REFERENCE.md  INSTALLATION.md  TROUBLESHOOTING.md
src/: __init__.py  main.py  run_with_tray.py  service.py
src/core/: __init__.py  handshake.py  local_cache.py  plc_client.py  sql_client.py
src/services/: __init__.py  heartbeat.py  logger.py  status_file.py
src/tray/: tray_app.py
src/utils/: __init__.py  config.py  validators.py
tests/: __init__.py  test_config.py  test_handshake.py  test_local_cache.py  test_validators.py
